[[Spesiaal:LintErrors/bogus-image-options]], replaced: |280x| → |280px|, |thumb|right| → |thumb| using [[Project:AWB|AWB]]

--- a/Liffey.mw
+++ b/Liffey.mw
@@ -1,11 +1,11 @@
-[[Ofbeelding:Liffeyeast.jpg|thumb|right|280x|De Ha'Penny Brugge oawer n Liffey]]
-n '''Liffey''' ([[Iers]]: ''An Life'') is nen [[rivier]] in [[Ierlaand (laand)|Ierlaand]] den duur n kern van [[Dublin]] löp en den stad in n [[Noord|Noorderlik]] en n [[Zuud (wiendstreek)|zuuderlik]] gedeelte opsplitst. Hee wörd bie evuld duur de riviern de [[Dodder]], [[Poddle]] en [[Camac]].
+[[Ofbeelding:Liffeyeast.jpg|thumb|280px|De Ha'Penny Brugge oawer n Liffey]]
+n '''Liffey''' ([[Iers]]: ''An Life'') is nen [[rivier]] in [[Ierlaand (laand)|Ierlaand]] den duur n kern van [[Dublin]] löp en den stad in n [[Noord]]erlik en n [[Zuud (wiendstreek)|zuuderlik]] gedeelte opsplitst. Hee wörd bie evuld duur de riviern de [[Dodder]], [[Poddle]] en [[Camac]].
 
 ==Naamn==
 n Rivier heetn eerst ''An Ruirthech'', wat "sneln of stoarkn loper" beteeknt. t Kan wean dèt t Ierse woord ''Life'' eerst vuur t hele streumgebeed van n Liffey geeldn. Vrooger wör t ook wal de ''Anna Liffey'' eneumd, wat ne verbastering is van t Ierse ''Abhainn na Life'', wat niks aans beteeknt as "Rivier n Liffey".
 
 ==Verloop==
-n Liffey begeent op n boarg [[Kippure]] in t [[Wicklowgeboargte]]. Hee hef n leankte van ongevear 125 km en löp duur de [[preveensies]] [[Wicklow]], [[Kildare]], en [[Dublin (preveensie)|Dublin]] en keump oet in n [[Iersn Zee]].
+n Liffey begeent op n boarg [[Kippure]] in t [[Wicklowgeboargte]]. Hee hef n leankte van ongevear 125&nbsp;km en löp duur de [[preveensies]] [[Wicklow]], [[Kildare]], en [[Dublin (preveensie)|Dublin]] en keump oet in n [[Iersn Zee]].
 
 ==Navigaasie en gebroek==
 De [[Vikingn]] gebreukn um al um vearder Ierlaand in te komn. Ook was t later nen belangriekn weg vuur haandel tusken Dublin en aandere steadn dee-t mear laandinwearts lignt.
@@ -15,7 +15,7 @@ De leste joarn wördt-e alleene mear vuur vermaak gebroekt. Dr goat roondvoartbo
 Dr beent tientaln van brugn oawer n Liffey. De bekeandsten beent [[O'Connell]]'s [[Brogge (bouwwark)|Brugge]] en Ha'Penny Brugge. Den lesten is ne vootgangersbrugge. Um dr oawerhen te meugn mo-j vrooger n ''halfpenny'' betaaln.
 
 ==Kades==
-De kades ([[Engels]]: ''Quays'', <small>sprek oet: ''kiejz''</small>) van n Liffey wördn gebroekt vuur t laadn en losn van vrachbootn. Vrooger was t n duuster spul, mear de leste joarn vestigd dr zik völle [[kafee|kafees]], [[hotel|hotels]] en n antal [[diskoteekn]].
+De kades ([[Engels]]: ''Quays'', <small>sprek oet: ''kiejz''</small>) van n Liffey wördn gebroekt vuur t laadn en losn van vrachbootn. Vrooger was t n duuster spul, mear de leste joarn vestigd dr zik völle [[kafee]]s, [[hotel]]s en n antal [[diskoteekn]].
 
 {{Dia|Disse pagina is eskreewn in t [[Riesns]]}}
 
