--- a/Samsø.mw
+++ b/Samsø.mw
@@ -1,11 +1,11 @@
-[[Bestaand:Denmark location samso.svg|thumb|right|Samsø in Deanemarkn.]]
-[[Bestaand:Map of Samsø.png|thumb|right|Koarte van Samsø.]]
-'''Samsø''' is n [[Denmaark|Deans]] eilaand det 15 km van t [[Jyllandhalfeilaand]] of in t [[Kattegat]] leg. t Leg in de [[Gemeante Samsø]]. t Eilaand zölf hef 4,300 (2009) inwönner dee ''Samsingers'' hett en hef n öppervlakte van 114,26 km². Deurde't önnevear in t mirre van aals leg wa't eilaand in de Vikingtied ne öntmootigeploatse. t Is nich bekaant woar n noam van t eilaand of köm.
+[[Bestaand:Denmark location samso.svg|thumb|Samsø in Deanemarkn.]]
+[[Bestaand:Map of Samsø.png|thumb|Koarte van Samsø.]]
+'''Samsø''' is n [[Denmaark|Deans]] eilaand det 15&nbsp;km van t [[Jyllandhalfeilaand]] of in t [[Kattegat]] leg. t Leg in de [[Gemeante Samsø]]. t Eilaand zölf hef 4,300 (2009) inwönner dee ''Samsingers'' hett en hef n öppervlakte van 114,26&nbsp;km². Deurde't önnevear in t mirre van aals leg wa't eilaand in de Vikingtied ne öntmootigeploatse. t Is nich bekaant woar n noam van t eilaand of köm.
 
 In 1997 winn Samsø nen Deansen Stöatspries veur t gebroek van greune energie. Noe-an-n-dag köm alle elektrisiteait (100%) öp t eilaand van weendenergie.
 
 == Algemeane informoasie ==
-t Eilaand is onmeunig bekaant biej [[Frankriek|Fraansn]], [[Kumrië]]rs en [[Ierlaand|Iern]] veur de möglikheaid d'r in juni en juli [[erebeie|earebeazn]] te gaddern. In Deanemarkn zölf is t eilaand veuraal bekaant veur de [[eerpel|tuffeleugste]]. t Earste poar kiloos van disse tuffeln könt priezn töt €130,- kriegn en stoat bekaant as ne grötte delikatesse. 
+t Eilaand is onmeunig bekaant biej [[Frankriek|Fraansn]], [[Kumrië]]rs en [[Ierlaand|Iern]] veur de möglikheaid d'r in juni en juli [[erebeie|earebeazn]] te gaddern. In Deanemarkn zölf is t eilaand veuraal bekaant veur de [[eerpel|tuffeleugste]]. t Earste poar kiloos van disse tuffeln könt priezn töt €130,- kriegn en stoat bekaant as ne grötte delikatesse.
 
 t Dorp Ballen en zin straand beent good biej de bezeukers.
 
@@ -19,10 +19,10 @@ t Eilaand is te verdeiln in drea stökker:
 * t Zuudeilaand (''Sydøen'').
 
 == Natuur ==
-[[Bestaand:Ballebjerg Samsø.jpg|thumb|left|200p|Samsø biej t Ballebjerggebeed.]]
+[[Bestaand:Ballebjerg Samsø.jpg|thumb|left|200px|Samsø biej t Ballebjerggebeed.]]
 t Eilaand hef völle natuurskierheaid. t Noordlikste peunt is Issehoved, woar veur de bezeukers nen "tak" van Skagen te zeen is. Møgelskår en Ballebjerg beent heuwelachtige gebeedn vanwoar iej gemaklik noar t straand an n sea goan könt. Vearder beent d'r goode straandn oawer t hölle eilaand hen.
 
-t Besserreef is lös veur t pebliek behalwe tiejdns de vöggelbroodtied. t Is n reef det biejnoa 7 km van t eilaand of n sea in geet.
+t Besserreef is lös veur t pebliek behalwe tiejdns de vöggelbroodtied. t Is n reef det biejnoa 7&nbsp;km van t eilaand of n sea in geet.
 
 Öp t Zuudeilaand he'j t Brattingsborgbos (''Brattingsborg Skov''), woar iej zoo wal könt waandeln as riejdn.
 
