--- a/Book_van_Mormon.mw
+++ b/Book_van_Mormon.mw
@@ -1,13 +1,12 @@
-[[Bestaand:Book of Mormon English Missionary Edition Soft Cover.jpg|thumb|250|t Book van Mormon in t Engels]]
+[[Bestaand:Book of Mormon English Missionary Edition Soft Cover.jpg|thumb|250px|t Book van Mormon in t Engels]]
 t '''Book van Mormon''' is een van de [[healigen geschrift]]en van de [[mormoonn]]. t Book wördt zeen as goddelik duur de [[Kearke van Jezus Christus van de Healigen der Leste Daagn]] (ofkort de ''Mormoonse Kearke'') en is verneumd noar de profeet-historikus [[Mormon]] dee, volgns t book zölf, t greutste part saamnsteld har. t Is oetgeavn duur de stichter van de mormoonse beweging, [[Joseph Smith]], in meert 1830 en drukt duur [[Egbert Bratt Grandin]] in [[Palmyra (Niej-York)|Palmyra]] in de [[Verenigde Stoatn van Amerika|Verenigde Stoatn]].
 
 t Book van Mormon maakt, saamn met de [[Biebel]], deel oet van t kanon van healigen geschriften van de Mormoonse Kearke, de [[Gemeenschop van Christus]], en aandere kearkn dee doarvan ofstamn. t Har as oorsproonkelike titel ''t Book van Mormon: n duur Mormon op plaatn schreavn verslag, oaverneumn van de plaatn van Nephi'' duur [[Joseph Smith|Joseph Smith Junior]], auteur en holder. De Mormoons Kearke veraanderde in [[1982]] de titel noar ''t Book van Mormon: n Testament van Jezus Christus'', um t doel te verdudelikn en te benoadrukn.
 
-De stichter van de Mormoonse Kearke, Joseph Smith, beweerde dat e in [[1827]] de golde plaatn oet de haand van n engel met de naam [[Moroni]] ontvangen zol hebn. Hee har de opdracht kreagn um de tekstn dee doarop stönn te vertaaln. 
+De stichter van de Mormoonse Kearke, Joseph Smith, beweerde dat e in [[1827]] de golde plaatn oet de haand van n engel met de naam [[Moroni]] ontvangen zol hebn. Hee har de opdracht kreagn um de tekstn dee doarop stönn te vertaaln.
 
 Boetn de sektariese mormoonse beweging erkent nich een christelike kearke of vereaniging de histories-theologiese autentisiteit van t dokument.
 
 {{DEFAULTSORT:Book Mormon}}
-
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Christendom]]
