[[Spesiaal:LintErrors/bogus-image-options]], replaced: |rightt| → |right|, |thumb|right| → |thumb| (4) using [[Project:AWB|AWB]]

--- a/Idaho_Panhandle.mw
+++ b/Idaho_Panhandle.mw
@@ -1,16 +1,16 @@
 [[Ofbeelding:Map of Idaho highlighting the Idaho Panhandle.png|thumb|left|150px|De koarte van n panhandle.]]
 n '''Idaho [[Panhandle]]''' is t noordlikste, oetsteknde peunt van n Amerikoanse stoat [[Idaho]]. De inwönners doar nömt t ''North Idaho'' (Noord-Idaho). t Zuudlikste deil van n regioo hett ok wal ''Noord-Sentroal-Idaho''. t Hef greanzn met [[Washington]] in t westn, [[Montana (staot)|Montana]] in t oostn, [[Brits-Kolumbia]] in [[Kanada]] in t noordn en n rest van Idaho in t zuudn.
 
-t Öppervlak van n regioo is 54.422,49 km², dös 25,39% van t öppervlak van n stoat. t Hef ok n woateröppervlak zoo gröt as 839,07km². t Har in 2004 önnevear 295,160 inwönnern.
+t Öppervlak van n regioo is 54.422,49&nbsp;km², dös 25,39% van t öppervlak van n stoat. t Hef ok n woateröppervlak zoo gröt as 839,07&nbsp;km². t Har in 2004 önnevear 295,160 inwönnern.
 
 == Skiednisse ==
-[[Ofbeelding:UI-arboretum-spring-moscow-id-us.png|thumb|rightt|150px|Botaniesen toen van n universeteait in Moscow.]]
+[[Ofbeelding:UI-arboretum-spring-moscow-id-us.png|thumb|150px|Botaniesen toen van n universeteait in Moscow.]]
 n Idaho Panhandle kömn in de tied a't [[Montanaterritoriöm]] oe't [[Idahoterritoriöm]] doan wörn in [[1864]].
 
 A'n zettel van de territorioale regearige in 1864 van [[Lewiston (Idaho)|Lewiston]] öp [[Boise (Idaho)|Boise]] an gung, docht zee det regearn meujlik wean zol in n panhandle, en zee harn idean öm n panhandle nen amparten stoat te moakn. Det gung oetiendlik nich, moar t kömn wear trög in 1901. Dan zegn zee de't miskien wal n good idea was a'n panhanle en [[Oost-Washington]] saamngungn en n [[Stoat van Lincoln]] wörn, moar ok det idea gung oet de tied. In 1889 gung n [[Universeteait van Idaho]] in [[Moscow (Idaho)|Moscow]] stoan.
 
 == Groafsköppe ==
-[[Ofbeelding:Idaho USA12.jpg|thumb|right|400px|Palouse-ebeed in n panhandle.]]
+[[Ofbeelding:Idaho USA12.jpg|thumb|400px|Palouse-ebeed in n panhandle.]]
 n Panhandle hef 10 groafsköppe. De liste steet hier önner.
 *[[Benewah Country]]
 *[[Bonner County]]
@@ -24,7 +24,7 @@ n Panhandle hef 10 groafsköppe. De liste steet hier önner.
 *[[Shoshone County]]
 
 == Wichtigste emeansköppe ==
-[[Ofbeelding:2008-1018-021-CoeurdAleneResort.JPG|thumb|right|400px|De stad [[Coeur d'Alene]] vanof t [[Mar van Coeur d'Alene]].]]
+[[Ofbeelding:2008-1018-021-CoeurdAleneResort.JPG|thumb|400px|De stad [[Coeur d'Alene]] vanof t [[Mar van Coeur d'Alene]].]]
 *[[Bonners Ferry]]
 *[[Coeur d'Alene]]
 *[[Dalton Gardens]]
@@ -45,7 +45,7 @@ n Panhandle hef 10 groafsköppe. De liste steet hier önner.
 *[[Nez Perce-indioannreservoat]]
 
 == De meujte woard te bekiekn ==
-[[Ofbeelding:CourdAlene TheLake.jpg|thumb|right|400px|t [[Mar van Coeur d'Alene]].]]
+[[Ofbeelding:CourdAlene TheLake.jpg|thumb|400px|t [[Mar van Coeur d'Alene]].]]
 *n [[Idaho Panhandle Nasjonoal Bos]]
 *[[Priest Lake]]
 *t [[Mar van Pend Oreille]]
