[[Spesiaal:LintErrors/bogus-image-options]], replaced: |righ| → |right|, |thumb|right| → |thumb| using [[Project:AWB|AWB]]

--- a/Pandeiro.mw
+++ b/Pandeiro.mw
@@ -1,9 +1,9 @@
-[[Ofbeelding:Pandeiro3.JPG|thumb|righ|200px|Pandeiro]]
+[[Ofbeelding:Pandeiro3.JPG|thumb|200px|Pandeiro]]
 De '''Pandeiro''' of '''Pandero''' ([[Portugees|Portugese]]se oetsproake: {{IPA|[pɐ̃ˈdejɾu]}}) is n soort haandtromme wat völle lik op n [[tamboerien]]. t Wörd völle in [[Brazilië|Braziljaanse]] muziek gebroekt.
 
 De pandeiro wörd met ene haande vasteheuldn en met de aandere haande bespöld. In de meeste soortn [[samba]] wörd de pandeiro bespöld duur n eerstn slag met n doem op n raand te houwn, n tweedn met de vingertöppe, n doardn met de moes van n doem en n veerdn met de vlakke haande in t middeln van t vel. In [[kapoeira]] is t luk aanders. Wieters kan dr nog met de pandeiro skudt wordn, woerduur't allene de skiefkes (de ''platinelas'') reenkelt, en dr kan met n vinger oawer t vel estrekn wordn, woerduur n soort ruffelken emaakt wörd.
 
-t verskil met n tamboerien is det t pandeirovel stemd kan wordn en det de metaalne reenkelskiefkes bol zeent, woerduur t geluud dreuger en körter wörd, woerduur ritmes dudeliker en oetgesprökner wordt. 
+t verskil met n tamboerien is det t pandeirovel stemd kan wordn en det de metaalne reenkelskiefkes bol zeent, woerduur t geluud dreuger en körter wörd, woerduur ritmes dudeliker en oetgesprökner wordt.
 
 Bekeande spöllers zeent [[Paulinho Da Costa]], [[airto Moreira]], [[Marcos Suzano]], [[Cyro Baptista]] en [[Carlinhos Pandeiro de Ouro]].
 
@@ -11,7 +11,7 @@ Bekeande spöllers zeent [[Paulinho Da Costa]], [[airto Moreira]], [[Marcos Suza
 
 * [http://www.pandeiro.com/ Algemene webstea oawer n pandeiro]
 * [http://www.emiliano.com/pandeiro.html instruksie oawer wo'j pandeiro mut spöln]
-* [http://www.proliberty.com/music/pandeiro/ Geluudsbestaandn van spölstieln en ne gaddering van bladmuziek, ritmes en techniek] 
+* [http://www.proliberty.com/music/pandeiro/ Geluudsbestaandn van spölstieln en ne gaddering van bladmuziek, ritmes en techniek]
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Muziekinstrumaent]]
