/* top */[[Spesiaal:LintErrors/bogus-image-options]], replaced: |rght| → |right|, |thumb|right| → |thumb| using [[Project:AWB|AWB]]

--- a/Ealsn.mw
+++ b/Ealsn.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding: Map - NL - Hof van Twente - Wijk 04 Elsen.svg|thumb|rght|200px|Ealsn in de Hof van Tweante]]
+[[Ofbeelding: Map - NL - Hof van Twente - Wijk 04 Elsen.svg|thumb|200px|Ealsn in de Hof van Tweante]]
 '''Ealsn''' ([[Nederlaands|Hollaands]]:''Elsen'') is ne boerskop kort bie [[Maarkel]], in de gemeente [[Hof van Tweante]], in [[Oaveriessel|Oaweriessel]].
 
 Rechtevoort wörd t ook wal Ealsn-[[Herike]] neumd, umdet disse boerskopn nauw met mekoar verbeundn beent, en feailik rechtevoort as ene buurte zeen köant wordn.
@@ -9,6 +9,6 @@ Vroger lea in Ealsn de [[Havezate Ealsn]].
 
 {{Hof van Tweante}}
 
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Plaatse in Oaveriessel]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Hof van Tweante]]
