[[Spesiaal:LintErrors/bogus-image-options]], replaced: |tight| → |right|, |thumb|right| → |thumb| (4) using [[Project:AWB|AWB]]

--- a/Haïti.mw
+++ b/Haïti.mw
@@ -1,5 +1,5 @@
-[[Bestaand: LocationHaiti.svg|thumb|right|200px|Haïti in t rood op ne kaarte van t Karibies gebeed]]
-[[Bestaand: Un-haiti.png|thumb|right|200px|[[VN]]-Kaarte van Haïti (klikt vuur ne oetvergroting)]]
+[[Bestaand: LocationHaiti.svg|thumb|200px|Haïti in t rood op ne kaarte van t Karibies gebeed]]
+[[Bestaand: Un-haiti.png|thumb|200px|[[VN]]-Kaarte van Haïti (klikt vuur ne oetvergroting)]]
 
 '''Haïti''', offisjeel de '''Reppubliek Haïti''' ([[Fraans]]k: ''République d'Haïti'', [[Kreyòl]]: ''Repiblik Ayiti'') is n [[eailaandstoat]] in de [[Karibiese Zee]]. t Laand ligt op t westelike deel van t eailaand [[Hispaniola]] en n antal kleaindere eailaanden, woervan't [[Île de la Gonâve]], [[Île de la Tortue]] en [[Île à Vache]] t grötste zeent. De heuwdstad is [[Port-au-Prince]]. Haïti ligt op t oosten van [[Kuba]] en op t westen van de [[Dominikaanse Reppubliek]], met ne greanze van ongevear 275 kilometer.
 
@@ -31,13 +31,13 @@ Bepoalde beslissings van Aristide wörren um nit in daank of enömmen duur laand
 In [[2006]] wör [[René Préval]] ekeuzen as presideant. Der is nog aait n vredesleager van de VN in Haïti. Regearen is feaitelik lastig in Haïti; t steet te book as nen [[mislukten stoat]].
 
 === Eardbewing Haïti 2010 ===
-[[Bestaand:2010 haiti shake map.jpg|thumb|right|150px|Plek van de eardbewing op de kaarte van Haïti]]
-[[Bestaand:Downtown Port au Prince after earthquake.jpg|thumb|tight|150px|Port-au-Prince noa de bewing]]
-Op [[12 jannewaori|12 jannuwoari]] [[2010]] (16:53 uur plaatselike tied) wör Haïti in [[Legane]], ongevear 25 kilometer van de heuwdstad Port-au-Prince, etröffen duur ne [[Eardbeving Haïti 2010|eardbewing]] van 7,0 op de [[skoale van Richter]]. Noa de bewing warren der verskeaidene [[noabewing]]s. Der wör n [[tsoenami]]-alarm of egewen vuur Haïti en umliggende eailaanden, mear wör later wier in etrökken. 
+[[Bestaand:2010 haiti shake map.jpg|thumb|150px|Plek van de eardbewing op de kaarte van Haïti]]
+[[Bestaand:Downtown Port au Prince after earthquake.jpg|thumb|150px|Port-au-Prince noa de bewing]]
+Op [[12 jannewaori|12 jannuwoari]] [[2010]] (16:53 uur plaatselike tied) wör Haïti in [[Legane]], ongevear 25 kilometer van de heuwdstad Port-au-Prince, etröffen duur ne [[Eardbeving Haïti 2010|eardbewing]] van 7,0 op de [[skoale van Richter]]. Noa de bewing warren der verskeaidene [[noabewing]]s. Der wör n [[tsoenami]]-alarm of egewen vuur Haïti en umliggende eailaanden, mear wör later wier in etrökken.
 
 Völle bekeande gebouwen störten in, zo as t paleis van n presideant, t nasjonale regearingsgebouw, de [[Katedraal van Port-au-Prince]], en ne grote gevangenis, woerduur't völle kriminelen vrie kömmen. Ook t VN-kantoor van de ''Mission des Nations Unies pour la stabilisation en Haïti'' (MINUSTAH), dee't gangs warren met de opbouw van Haïti, störten in, woerbie n direkteur, n oonderdirekteur en t heuwd van de plietsie oet de tied kömmen.
 
-Vanoawer de hele weareld wörden der hulpaksies op töw ezat, zo as oet buurlaand de Dominikaanse Reppebliek, [[Taiwan]], [[Brazilië]], t [[Verenigd Keuninkriek]], [[Qatar]] en de [[Verenigde Stoaten]]. Ettenspakketten, skoon water, dokters, reddingswoarkers, en medisienen wörden allemoal noar Haïti esteurd. 
+Vanoawer de hele weareld wörden der hulpaksies op töw ezat, zo as oet buurlaand de Dominikaanse Reppebliek, [[Taiwan]], [[Brazilië]], t [[Verenigd Keuninkriek]], [[Qatar]] en de [[Verenigde Stoaten]]. Ettenspakketten, skoon water, dokters, reddingswoarkers, en medisienen wörden allemoal noar Haïti esteurd.
 
 In [[Neerlaand]] hebt zik de radiostasjons [[3FM]], [[Radio 538]], [[Q-music]], [[Radio 2]], [[Radio Veronica]] en [[Slam! FM]] verenigd in [[Radio 555]], um geeld bie mekoar te kriegen vuur hulp an Haïti. Radio 555 slöt op GIRO 555, ne rekkening dee't al earder wör lös edoan vuur donasies noa n raamp met de [[tsoenami]] in [[2004]].
 
@@ -67,7 +67,6 @@ t Laand hef n antal kale vlaktes, mear vuural nen hoop heuwels en boarge. Eerst 
 {{Bron|<references/>}}
 
 {{DEFAULTSORT:Haiti}}
-
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Laand]]
 [[Kategorie:Amerika]]
