[[Spesiaal:LintErrors/bogus-image-options]], replaced: ||thumb| → |thumb| (2) using [[Project:AWB|AWB]]

--- a/Effektpedaal.mw
+++ b/Effektpedaal.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Foot switch 002.jpg||thumb|250px|Zoom 3030-pedaal]]
+[[Ofbeelding:Foot switch 002.jpg|thumb|250px|Zoom 3030-pedaal]]
 Een '''effektpedaal''' is een [[Elektronika|elektronies]] apparoat dat veulal deur [[gitarist]]en gebruukt wöd. Et is derveur emaakt um et geluud te vervormen en op dee wieze verskeidene effekten veurt te brengen.
 
 Nen ''foot switch'' ([[Nedersaksisch]]:''vootschakelaar'') is n pedaal woarmet zie van verstarkerkanaal wesselt.
@@ -12,7 +12,7 @@ Al raps gingen völle [[hardrock]]- en [[metal]]bends an de slag mit pedaaln. Pe
 ==Warking==
 Nen ''foot switch'' warkt deur nen kabel van den gitaar noar et pedaal, en dan nog nen kabel an de andere kante van et pedaal noar den verstarker in te stekken. Der bunt ok pedaaln dee-j rechstreaks deur middel van nen aparten kabel in nen aparten uutgang van den verstarker könt stekken.
 As der gitaar wödt espöld, en zie drükt dan met den voot (vandoar uutereerd den noam ''foot switch'') op et pedaal, dan zal der n effekt op et geluud zitten, of wödt et geluud nog dubbel verstarkt.
-[[Ofbeelding:Foot switch 004.jpg||thumb|250px|Detail Zoom 3030-pedaal]]
+[[Ofbeelding:Foot switch 004.jpg|thumb|250px|Detail Zoom 3030-pedaal]]
 
 ==Taak==
 Pedaaln zorgt veur effekten zoas [[Chorus (geluudseffekt)|Chorus]], [[Flanger]], [[Phaser]], [[Echo]], enz..., moar künt ok nog dubbel [[distortion]], gain, treble, bass, ... an et geluud toovoegen.
@@ -46,5 +46,5 @@ Pedaaln bunt ok gans händig um bieveurbeeld van [[Clean (klank)|clean]] noar [[
 *[[Octaver]]
 *[[Pitchshifter]]
 
-[[Kategorie:Achterhooks_artikel]]
+[[Kategorie:Achterhooks artikel]]
 [[Kategorie:Muziektoovoogsels]]
